<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomeFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/txtHeading"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/notes"
        android:textStyle="bold"
        android:textSize="30sp"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:padding="6dp"
        android:background="#F88379"/>

    <EditText
        android:id="@+id/editTextGoal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/title" />

    <EditText
        android:id="@+id/editTextTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/descriptions" />

    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/select_a_date" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:text="@string/add" />

    <TextView
        android:id="@+id/textViewGoals"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_notes"
        android:textStyle="bold"
        android:paddingTop="16dp"
        android:layout_marginStart="15dp"
        android:paddingBottom="8dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/goalList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:orientation="vertical" />

</LinearLayout>